--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
+  <link href="http://agungwidiyoso.github.io/css/agency.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/ff28ba0a83.js" crossorigin="anonymous"></script>
 
 </head>
