--- a/index.html
+++ b/index.html
@@ -409,18 +409,18 @@ Terima kasih</p>
   </section>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="http://agungwidiyoso.github.io/vendor/jquery/jquery.min.js"></script>
+  <script src="http://agungwidiyoso.github.io/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="http://agungwidiyoso.github.io/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Contact form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
+  <script src="http://agungwidiyoso.github.io/js/jqBootstrapValidation.js"></script>
+  <script src="http://agungwidiyoso.github.io/js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/agency.min.js"></script>
+  <script src="http://agungwidiyoso.github.io/js/agency.min.js"></script>
 
 </body>
 
