--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Agung Widiyoso CV</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="http://agungwidiyoso.github.io/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -409,18 +409,18 @@ Terima kasih</p>
   </section>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="http://agungwidiyoso.github.io/vendor/jquery/jquery.min.js"></script>
-  <script src="http://agungwidiyoso.github.io/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="http://agungwidiyoso.github.io/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Contact form JavaScript -->
-  <script src="http://agungwidiyoso.github.io/js/jqBootstrapValidation.js"></script>
-  <script src="http://agungwidiyoso.github.io/js/contact_me.js"></script>
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="http://agungwidiyoso.github.io/js/agency.min.js"></script>
+  <script src="js/agency.min.js"></script>
 
 </body>
 
