--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Terima kasih</p>
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" >
             
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="/portfolio/06-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Grafis Production</h4>
