--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ Terima kasih</p>
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" >
             
-            <img class="img-fluid" src="img/gayakuy1.jpg" alt="">
+            <img class="img-fluid" src="img/gayakuy1.JPG" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Gayakuy.com</h4>
@@ -318,7 +318,7 @@ Terima kasih</p>
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" >
             
-            <img class="img-fluid" src="img/sembako1.jpg" alt="">
+            <img class="img-fluid" src="img/sembako1.JPG" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>SembakoKu</h4>
